--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,5 +11,6 @@ package:
   script:
     - docker build -t registry.gitlab.com/$GITLAB_USER/$PROJECT_NAME .
     - docker push registry.gitlab.com/$GITLAB_USER/$PROJECT_NAME
-  #after_script:
+  after_script:
   #  - docker logout
+    - echo "배포를 시작합니다."
