--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,8 @@ package:
   before_script:
     - docker login registry.gitlab.com -u $GITLAB_USER -p $GITLAB_PW
   script:
-    - docker build -t registry.gitlab.com/$GITLAB_USER/$PROJECT_NAME .
+    - docker build -t registry.gitlab.com/$GITLAB_USER/pipelineprac/$PROJECT_NAME .
     - docker push registry.gitlab.com/$GITLAB_USER/$PROJECT_NAME
   after_script:
-  #  - docker logout
+    - docker logout
     - echo "배포를 시작합니다."
