--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ package:
     - docker login registry.gitlab.com -u $GITLAB_USER -p $GITLAB_PW
   script:
     - docker build -t registry.gitlab.com/$GITLAB_USER/pipelineprac/$PROJECT_NAME .
-    - docker push registry.gitlab.com/$GITLAB_USER/$PROJECT_NAME
+    - docker push registry.gitlab.com/$GITLAB_USER/pipelineprac/$PROJECT_NAME
   after_script:
     - docker logout
     - echo "배포를 시작합니다."
